force-app/main/default/objects/Facility_Physician_Patient__c/Facility_Physician_Patient__c.object-meta.xml
<CustomObject>
    <label>Facility Physician Patient</label>
    <nameField>
        <label>Facility Physician Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Physician Patient</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>