force-app/main/default/objects/Facility_Physician_Patient__c/fields/Fac_City__c.field-meta.xml
<CustomField>
    <fullName>Fac_City__c</fullName>
    <formula>FacilityID__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fac City</label>
    <type>Text</type>
</CustomField>