force-app/main/default/objects/Facility_Physician_Patient__c/fields/Fac_JDE_Number__c.field-meta.xml
<CustomField>
    <fullName>Fac_JDE_Number__c</fullName>
    <formula>FacilityID__r.JDE_External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JDE Number</label>
    <type>Text</type>
</CustomField>