force-app/main/default/objects/Facility_Physician_Patient__c/fields/Fac_Name__c.field-meta.xml
<CustomField>
    <fullName>Fac_Name__c</fullName>
    <formula>FacilityID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fac Name</label>
    <type>Text</type>
</CustomField>