force-app/main/default/objects/Facility_Physician_Patient__c/fields/Fac_State__c.field-meta.xml
<CustomField>
    <fullName>Fac_State__c</fullName>
    <formula>FacilityID__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fac State</label>
    <type>Text</type>
</CustomField>