force-app/main/default/objects/Facility_Physician_Patient__c/fields/Fac_Street1__c.field-meta.xml
<CustomField>
    <fullName>Fac_Street1__c</fullName>
    <formula>FacilityID__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fac Street 1</label>
    <type>Text</type>
</CustomField>