force-app/main/default/objects/Facility_Physician_Patient__c/fields/Fac_Street_3__c.field-meta.xml
<CustomField>
    <fullName>Fac_Street_3__c</fullName>
    <formula>FacilityID__r.Billing_Address_Line_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fac Street 3</label>
    <type>Text</type>
</CustomField>