force-app/main/default/objects/Facility_Physician_Patient__c/fields/Fac_Zip__c.field-meta.xml
<CustomField>
    <fullName>Fac_Zip__c</fullName>
    <formula>FacilityID__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fac Zip</label>
    <type>Text</type>
</CustomField>