force-app/main/default/objects/Facility_Physician_Patient__c/fields/Facililty_Info__c.field-meta.xml
<CustomField>
    <fullName>Facililty_Info__c</fullName>
    <formula>&quot;JDE Number: &quot; +FacilityID__r.JDE_External_ID__c +  &quot; - &quot; +FacilityID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facililty Info</label>
    <type>Text</type>
</CustomField>