force-app/main/default/objects/Facility_Physician_Patient__c/fields/Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address__c</fullName>
    <formula>FacilityID__r.BillingStreet + &quot; &quot; + FacilityID__r.Billing_Address_Line_2__c + &quot; &quot; + FacilityID__r.Billing_Address_Line_3__c + &quot; &quot; + FacilityID__r.BillingCity +&quot;, &quot; + FacilityID__r.BillingState + &quot;  &quot; + FacilityID__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Address</label>
    <type>Text</type>
</CustomField>