force-app/main/default/objects/Facility_Physician_Patient__c/fields/FacilityID__c.field-meta.xml
<CustomField>
    <fullName>FacilityID__c</fullName>
    <label>FacilityID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facility Physician Patient</relationshipLabel>
    <relationshipName>Facility_Physician_Patient</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>