force-app/main/default/objects/Facility_Physician_Patient__c/fields/JunctionJDE_External_ID__c.field-meta.xml
<CustomField>
    <fullName>JunctionJDE_External_ID__c</fullName>
    <description>External Id for upset</description>
    <externalId>true</externalId>
    <label>JunctionJDE_External_ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>