force-app/main/default/objects/Facility_Physician_Patient__c/fields/Pat_Name__c.field-meta.xml
<CustomField>
    <fullName>Pat_Name__c</fullName>
    <formula>PatientID__r.FirstName + &quot; &quot; +  PatientID__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pat Name</label>
    <type>Text</type>
</CustomField>