force-app/main/default/objects/Facility_Physician_Patient__c/fields/PatientID__c.field-meta.xml
<CustomField>
    <fullName>PatientID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facility Physician Patient (PatientID)</relationshipLabel>
    <relationshipName>Facility_Physician_Patient2</relationshipName>
    <type>Lookup</type>
</CustomField>