force-app/main/default/objects/Facility_Physician_Patient__c/fields/Phy_Name__c.field-meta.xml
<CustomField>
    <fullName>Phy_Name__c</fullName>
    <formula>PhysicianID__r.FirstName + &quot; &quot; +  PhysicianID__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phy Name</label>
    <type>Text</type>
</CustomField>