force-app/main/default/objects/Facility_Physician_Patient__c/fields/PhysicianID__c.field-meta.xml
<CustomField>
    <fullName>PhysicianID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PhysicianID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facility Physician Patient (PhysicianID)</relationshipLabel>
    <relationshipName>Facility_Physician_Patient1</relationshipName>
    <type>Lookup</type>
</CustomField>